[metadata]
name = PteraSoftware
version = 3.1.0
author = Cameron Urban
author_email = camerongurban@gmail.com
license = MIT
description = This is an open-source, unsteady aerodynamics solver for analyzing flapping-wing flight.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/camurban/pterasoftware
project_urls =
	Bug Tracker = https://github.com/camurban/pterasoftware/issues
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Physics
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent
keywords =
	python
	uav
	simulation
	aerospace
	computational-biology
	cfd
	solvers
	computational-fluid-dynamics
	aerodynamics
	aeronautics
	potential-flow
	vlm
	aerospace-engineering
	unsteady-flows
	aircraft-design
	unmanned-aerial-vehicle
	ornithopter
	ornithology
	vortex-lattice-method
	pyvista

[options]
packages =
	pterasoftware
	pterasoftware.airfoils
include_package_data = True
python_requires = >= 3.10.0, < 3.11.0
install_requires =
	matplotlib >= 3.9.2, < 4.0.0
	numpy >= 1.26.4, < 2.0.0
	pyvista >= 0.44.1, < 1.0.0
	scipy >= 1.14.1, < 2.0.0
	numba >= 0.60.0, < 1.0.0
	cmocean >= 4.0.3, < 5.0.0
	tqdm >= 4.67.0, < 5.0.0
	webp >= 0.4.0, < 1.0.0
	PySide2 >= 5.15.2.1, < 6.0.0.0
